<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:scrollbars="vertical"
    tools:context=".PatientSelect" >

    <TextView
        android:id="@+id/patientInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addReportButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/HCNentry"
        android:fadeScrollbars="false"
        android:maxLines="25"
        android:scrollbars="vertical"
        android:text="@string/prompt" />

   	<EditText
   	    android:id="@+id/HCNentry"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentLeft="true"
   	    android:layout_alignParentTop="true"
   	    android:layout_toLeftOf="@+id/findPatient"
   	    android:ems="10"
   	    android:hint="@string/HCN" />

   	<Button
   	    android:id="@+id/addReportButton"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentBottom="true"
   	    android:layout_alignParentRight="true"
   	    android:onClick="toNewRecord"
   	    android:text="@string/updateButton" />

   	<Button
   	    android:id="@+id/findPatient"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignBottom="@+id/HCNentry"
   	    android:layout_alignParentRight="true"
   	    android:layout_alignParentTop="true"
   	    android:onClick="findPatient"
   	    android:text="@string/findPatientButton" />

   	<Button
   	    android:id="@+id/listButton"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentBottom="true"
   	    android:layout_alignParentLeft="true"
   	    android:layout_alignTop="@+id/addReportButton"
   	    android:layout_toLeftOf="@+id/addReportButton"
   	    android:onClick="listPatients"
   	    android:text="@string/listPatientButton" />
    
</RelativeLayout>